syntax = "proto3";

package Validate;

service Validate {
  rpc validate_token(TokenRequest) returns (UserInfo);
  rpc validate_auth(AuthRequest) returns (AuthResponse);
  rpc validate(ValidateRequest) returns (ValidateResponse);
  rpc add_url_auth(AddUrlAuthRequest) returns (AddUrlAuthResponse);
}

message TokenRequest {
  string token = 1;
}

message UserInfo {
  string user_name = 1;
  uint64 user_id = 2;
  map<string, string> data = 3;
  int64  time_out = 4;
}

message AuthRequest{
  uint64 user_id = 1;
  string url = 2;
}

message AuthResponse{
  bool ok = 1;
}

message ValidateRequest{
  string token = 1;
  string url = 2;
}

message ValidateResponse{
  AuthResponse auth=1;
  UserInfo user=2;
}

message AddUrlAuthRequest{
  string url=1;
  string auth=2;
}

message AddUrlAuthResponse{
  bool ok =1;
}